Bug 152921 - Sidebar deck is shown as "selected active" when closing with grey cross
Summary: Sidebar deck is shown as "selected active" when closing with grey cross
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2023-01-07 21:59 UTC by lol
Modified: 2023-02-21 20:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sidebar deck shown open when closing (992.54 KB, application/x-matroska)
2023-01-07 21:59 UTC, lol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lol 2023-01-07 21:59:45 UTC
Created attachment 184520 [details]
Sidebar deck shown open when closing

The deck in the sidebar is shown as open when closing it with the grey cross. This happens every second time.

Steps to Reproduce:
1. Open a Writer document
2. Click on any deck button for example navigator
3. Close the deck with the grey cross
4. Open the same deck with the deck button
5. Repeat step 4 and 5 (See attached video)

This occurs in all LO applications.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 44355a90b3450111ad87ad4b6607a564e41d7b54
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 V Stuart Foote 2023-01-09 13:11:28 UTC
Confirmed

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9e3e20bfd102880d12384892eaeca094c38a519
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

The "selected" state for the tabbar button does not track with the deck opened or closed state. Using the "cross" button on the SB deck to collapse/close the deck should not affect the selection on the SB tabbar--and otherwise should not show a deck without a SB tabbar tab showing selected.
Comment 2 Jim Raykowski 2023-01-10 19:00:40 UTC
Effort to make the tab bar deck tab highlight as expected:
https://gerrit.libreoffice.org/c/core/+/142057
Comment 3 Commit Notification 2023-01-12 20:02:22 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc3deffb15f6c924375b38f606eb640fe065089f

tdf#152921 Fix sidebar tabbar tab highlighting

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-13 08:14:25 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a1ef8d35d4b664b5d896ff4030a70a4020b26968

tdf#152921 Fix sidebar tabbar tab highlighting

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 lol 2023-01-15 11:02:55 UTC
Verified. Checked with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 37e3455a13ab5741104bf41d05a80e60a4612682
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

The "selected" state for the tabbar button does track with the deck opened or closed state, when using the grey cross to close a deck.

Thanks for fixing this!

Will this also be backported to LO 7.4 too?
Comment 6 Commit Notification 2023-02-21 20:20:49 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88e29df0c216c300b9388ee2822003da2bee8679

tdf#152921 add uitest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.