tdf#152921 Fix sidebar tabbar tab highlighting

Makes the highlight state of the tabbar tab behave as expected when
the sidebar is in the collapsed or expanded state. When collapsed, the
tabbar should never have a highlighted tab. When expanded, the tab in
the tabbar corrosponding to the open deck should be highlighted.

Change-Id: I0e6c54aff95b1f1e417f147070742e900fd51513
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145251
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit dc3deffb15f6c924375b38f606eb640fe065089f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145435
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>